--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2023.07.11, v1.4.1
+
+feature:
+- 10ef50d package: eslint-plugin-putout v18.1.0
+- ef0339a package: putout v30.3.1
+
 2023.07.11, v1.4.0
 
 fix:
