--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2023.08.17, v1.5.0
+
+feature:
+- 11c1cfb add ability to save transform
+- 0ee03c5 add ability to create new transform
+- ef3ef6a menu: add
+- c670612 package: @babel/plugin-proposal-private-property-in-object v7.21.11
+- e150276 package: @testing-library/jest-dom v6.0.0
+- 04cf1b8 package: putout v31.2.1
+- 685ef36 package: eslint-plugin-putout v19.1.0
+
 2023.07.11, v1.4.1
 
 feature:
