--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2023.09.27, v1.10.0
+
+feature:
+- 4412137 package: putout v32.1.0
+- 6631340 package: eslint-plugin-putout v20.0.0
+- b040059 add convert-optional-to-logical, speed up
+
 2023.08.27, v1.9.3
 
 feature:
