--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2025.07.12, v1.23.1
+
+feature:
+- f41370e putout-editor-react: eslint-webpack-plugin v5.0.2
+- b899898 putout-editor-react: jest-watch-typeahead v3.0.1
+- 890dc12 putout-editor-react: jest-resolve v30.0.2
+- 688b142 putout-editor-react: camelcase v8.0.0
+- cc3ef2b putout-editor-react: @testing-library/react v16.3.0
+- 521ed02 putout-editor-react: babel-jest v30.0.4
+- a0c666e putout-editor-react: jest v30.0.4
+- 0fc2a47 putout-editor-react: eslint-plugin-putout v28.0.1
+- 9eb6b49 putout-editor-react: @putout/plugin-react-hooks v9.0.0
+
 2025.04.15, v1.23.0
 
 feature:
