--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2025.12.09, v1.23.2
+
+feature:
+- 72ef7d2 mobile-putout-editor: DefaultSource: rm \n
+- c6c0303 mobile-putout-editor: eslint-plugin-putout v29.0.2
+- 3ffa049 mobile-putout-editor: putout v41.0.2
+
 2025.07.12, v1.23.1
 
 feature:
