--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2026.01.04, v1.25.0
+
+fix:
+- bd7e012 transformer: load latest @putout/bundle
+
+feature:
+- a581096 mobile-putout-editor: try-to-catch v4.0.2
+- 3114f68 mobile-putout-editor: try-catch v4.0.6
+- 0bcc470 mobile-putout-editor: flatlint v4.0.7
+- ff728ef mobile-putout-editor: madrun v12.1.0
+
 2025.12.10, v1.24.0
 
 feature:
