--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2026.02.23, v1.25.2
+
+feature:
+- 0415e96 mobile-putout-editor: globals v17.3.0
+- e723b54 mobile-putout-editor: webpack-dev-server v5.2.3
+
 2026.02.23, v1.25.1
 
 feature:
