--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2026.02.25, v1.25.3
+
+feature:
+- 1d897b8 mobile-putout-editor: css-minimizer-webpack-plugin v7.0.4
+- a360ffd mobile-putout-editor: react-dom v19.2.4
+- 59b4dfd mobile-putout-editor: react v19.2.4
+
 2026.02.23, v1.25.2
 
 feature:
